# hamsterpack

./: .gitignore  CMakeLists.txt  HamsterInclude.txt  README.md
cmake/modules/: FindHamsterPack.cmake
include/: hamsterpack.h  tinydir.h
src/: hamsterimpl.cc  hamsterpack.cc  main.cc
test/: CMakeLists.txt  hamsterdata.cc  hamsterfile.cc  main.cc
test/data/: lorem.txt  test.txt
test/data/dir1/: test1.txt
